kubernete/mogo/mongo-express-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector:
    app: mongo-express
    # external service
    type: loadBalancer
  port:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      # this port where this external IP address is opened
      # put in the browser to access the service
      # range 30000 - 32000
      nodePort: 30000
