kubernete/mogo/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongo
    # internal service
    # with type = clusterIp (default)
  port:
    - protocol: TCP
      port: 27017
      targetPort: 27017
